--- a/src/main/webapp/style/style.css
+++ b/src/main/webapp/style/style.css
@@ -71,3 +71,20 @@ a {
 .margincard {
  margin:10px;
 }
+
+
+.alingText {
+    text-align: center;
+}
+
+form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.col-md-3 {
+  margin-bottom: 20px; /* Espacio entre los elementos del formulario */
+  text-align: center; /* Centrar el contenido horizontalmente */
+}
