add: Add responsive design to index

--- a/src/main/webapp/style/style.css
+++ b/src/main/webapp/style/style.css
@@ -4,6 +4,14 @@
     padding: 0px;
 }
 
+html{
+    min-height: 100vh;
+}
+
+body{
+    min-height:100%;
+}
+
 a {
     white-space: nowrap;
   }
@@ -13,6 +21,7 @@ a {
    min-height: 100vh;
    display: flex;
    flex-direction: column;
+   justify-content: space-between;
  }
 
  .title{
@@ -22,6 +31,7 @@ a {
 .welcome{
     display: flex;
     flex-direction: row;
+    justify-content: space-between;
     flex-wrap: wrap;
     margin: 0 auto;
     width: 100%;
@@ -33,6 +43,8 @@ a {
 }
 
 .textinfo{
+    display: flex;
+    flex-direction: column;
     max-width: 50%;
     text-align:justify;
     justify-content: center;
@@ -40,6 +52,7 @@ a {
 
   .textinfo p{
     margin: 2%;
+    font-size: 100%;
   }
 
 /*CSS card*/
@@ -75,4 +88,17 @@ a {
 
 .greyborder {
     border-bottom: 1px solid grey;
+}
+
+@media (max-width: 992px){
+    .welcome{
+        flex-direction: column;
+        align-item: center;
+    }
+    .indexphoto{
+        border-radius: 15px;
+        width: 100%;
+    }
+    .textinfo{
+        max-width: 100%;
 }
