--- a/src/main/webapp/style/style.css
+++ b/src/main/webapp/style/style.css
@@ -59,7 +59,7 @@ a {
 
 /*CSS card*/
 .card {
-    width: 25%;
+    min-width: 25%;
     background-color: white;
     border-radius: 16px;
     overflow: hidden;
@@ -85,7 +85,6 @@ a {
     width: 100%;
     max-width: 1200px;
     gap: 15px;
-    max-height: 85vh;
 }
 
 .greyborder {
@@ -160,4 +159,17 @@ form {
     }
     .textinfo{
         max-width: 100%;
+}
+
+@media (max-width: 1100px){
+    .list-flex {
+        flex-direction: column;
+        align-items: center;
+        flex-wrap: nowrap;
+    }
+    .col-lg-6 col-xxl-4 my-5 mx-auto{
+        max-width: 50%;
+    }
+    }
+
 }
