--- a/src/main/webapp/style/style.css
+++ b/src/main/webapp/style/style.css
@@ -66,7 +66,8 @@ a {
     -webkit-box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
     box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
     text-align: center;
-
+    background-image: url("../../roleplaying-web-app_data/pergamino.jpg");
+    font-family: papyrus;
 }
 
 .nickname{
